# agent-gateway

./: .env.example  .gitignore  CLAUDE.md  README.md  init.md  pyproject.toml
.github/scripts/: promote_tools.py
.github/workflows/: auto_pr.yml  auto_promote.yml  qa_agent_review.yml
data/: telemetry.db
local-workspace/: .env.example  AGENTS.md  CLAUDE.md
local-workspace/.claude/: .mcp.json  AGENTS.md  CLAUDE.md  settings.json
local-workspace/.claude/agents/: field-enricher.md  qa-pre-check.md  session-scribe.md
local-workspace/.claude/output-styles/: analyst.md
local-workspace/.claude/rules/: guardrails.md  integration-docs.md  python-quality.md  session-notes.md  skill-standards.md
local-workspace/.claude/skills/integration-onboarding/: SKILL.md
local-workspace/.claude/skills/workspace-onboarding/: SKILL.md
local-workspace/context/: mcp-registry.md
remote-gateway/: .env.example  CLAUDE.md  mcp_connections.json
remote-gateway/core/: mcp_proxy.py  mcp_server.py
remote-gateway/prompts/: qa_agent_instructions.md
remote-gateway/tests/: test_notes.py
