[project]
name = "inform-gateway"
version = "0.1.0"
description = "Agentic GitOps monorepo: local R&D sandbox + centralized MCP gateway"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
